--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "4.0-file-paths",
+  "name": "4.1-ejs-tags",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -9,9 +10,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
   }
 }
